--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,11 @@
-{{- $wechat := resources.Get (.Site.Params.wechat | default "images/qrcode.jpg") -}}
 {{- $avatar := resources.Get (.Site.Params.avatar | default "images/avatar.png") -}}
 
 <header class="site-header">
-  <img class="avatar" src="{{ $avatar.RelPermalink }}" alt="Avatar">
+  <a href="/hakkimda" class="less-opacity"><img class="avatar" src="{{ $avatar.RelPermalink }}" alt="{{ .Site.Title }}"></a>
   {{  if eq .Kind "home" }}
-  <h1 class="title">{{ .Site.Title }}</h1>
+  <a href="/"><h1 class="title">{{ .Site.Title }}</h1></a>
   {{ else }}
-  <h2 class="title">{{ .Site.Title }}</h2>
+  <a href="/"><h2 class="title">{{ .Site.Title }}</h2></a>
   {{ end }}
   <p class="subtitle">{{ .Site.Params.subtitle }}</p>
   <button class="menu-toggle" type="button" aria-label="Main Menu" aria-expanded="false" tab-index="0">
@@ -184,21 +183,6 @@
         </li>
       {{- end -}}
 
-      {{- with .Site.Params.weibo -}}
-        <li class="social-item">
-          <a href="//weibo.com/{{ . }}" title="Weibo" aria-label="Weibo">
-            <span class="icon icon-weibo" aria-hidden="true"></span>
-          </a>
-        </li>
-      {{- end -}}
-
-      {{- with .Site.Params.wechat -}}
-        <li class="social-item">
-          <a href="{{ $wechat.RelPermalink }}" title="Wechat" aria-label="Wechat">
-            <span class="icon icon-wechat" aria-hidden="true"></span>
-          </a>
-        </li>
-      {{- end -}}
 
       {{- with .Site.Params.linkedin -}}
         <li class="social-item">
