--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "title" }}
-  {{ if eq .Data.Singular "tag" }}{{ .Data.Term }} içerikleri
-  {{ else if eq .Data.Singular "category" }}{{ .Data.Term }} kategorisi içerikleri
-  {{ else }}Yazılar{{ end }}
+  {{ if eq .Data.Singular "tag" }}{{ .Data.Term }} posts
+  {{ else if eq .Data.Singular "category" }}{{ .Data.Term }} posts
+  {{ else }}Posts{{ end }}
   {{ if isset .Site.Params "seotitle" }} | {{ .Site.Params.seotitle }}{{ else }} | {{ .Site.Title }}{{ end }}
 {{ end }}
 
@@ -10,11 +10,11 @@
   <section class="main post-list">
     {{ if eq .Data.Singular "tag" }}
     <header class="post-header">
-      <h1 class="post-title">{{ .Data.Term }} ile etiketlenmiş içerikler</h1>
+      <h1 class="post-title">Posts tagged with {{ .Data.Term }}</h1>
     </header>
     {{ else if eq .Data.Singular "category" }}
     <header class="post-header">
-      <h1 class="post-title">{{ .Data.Term }} kategorisi içerikleri</h1>
+      <h1 class="post-title">Category: {{ .Data.Term }}</h1>
     </header>
     {{ else }}
     <header class="list-header offscreen">
