--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -14,13 +14,13 @@
         {{ $data := .Data }}
         {{ range $key, $value := $data.Terms.ByCount }}
           {{ $weight := $value.Count }}
-          <a href="/etiket/{{ $value.Name | urlize }}/" class="tag-{{ if eq $weight 1 }}s{{ else if eq $weight 2 }}m{{ else if eq $weight 4 }}l{{ else if eq $weight 8 }}xl{{ else }}xxl{{ end }}">{{ $value.Name }}</a>
+          <a href="/tag/{{ $value.Name | urlize }}/" class="tag-{{ if eq $weight 1 }}s{{ else if eq $weight 2 }}m{{ else if eq $weight 4 }}l{{ else if eq $weight 8 }}xl{{ else }}xxl{{ end }}">{{ $value.Name }}</a>
         {{ end }}
       {{ else if eq .Data.Singular "category" }}
         {{ $data := .Data }}
         {{ range $key, $value := $data.Terms.ByCount }}
           {{ $weight := $value.Count }}
-          <a href="/kategori/{{ $value.Name | urlize }}/" class="tag-{{ if eq $weight 1 }}s{{ else if eq $weight 2 }}m{{ else if eq $weight 4 }}l{{ else if eq $weight 8 }}xl{{ else }}xxl{{ end }}">{{ $value.Name }}</a>
+          <a href="/category/{{ $value.Name | urlize }}/" class="tag-{{ if eq $weight 1 }}s{{ else if eq $weight 2 }}m{{ else if eq $weight 4 }}l{{ else if eq $weight 8 }}xl{{ else }}xxl{{ end }}">{{ $value.Name }}</a>
         {{ end }}
       {{ else }}Nothing to show.{{ end }}
 
