--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -10,7 +10,7 @@
       {{ if isset .Params "tags" }}
       <ul class="post-tags">
         {{ range $tag := .Params.tags }}
-          <li><a href="/etiket/{{ $tag | urlize }}"><span class="tag">{{ $tag | title }}</span></a></li>
+          <li><a href="/tag/{{ $tag | urlize }}"><span class="tag">{{ $tag | title }}</span></a></li>
         {{ end }}
       </ul>
       {{ end }}
