--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -12,11 +12,11 @@
   }
 
   @media screen and (max-width: $tablet) {
-    position: absolute;
+
     top: 1rem;
     left: 1rem;
-    width: 2rem;
-    height: 2rem;
+    width: 120px;
+    height: 120px;
     margin-top: 0;
     border: 2px solid $media-border;
   }
@@ -29,13 +29,17 @@
   margin: 1rem auto;
 
   @media screen and (max-width: $tablet) {
-    margin-top: 3rem;
+    margin-top: 10px;
   }
 }
 
 .subtitle {
   margin-bottom: 3rem;
   opacity: 0.7;
+
+    @media screen and (max-width: $tablet) {
+      margin-bottom:10px;
+    }
 }
 
 .menu-toggle {
@@ -66,6 +70,10 @@
 
   & .menu-item {
     padding: 1rem 0;
+
+    @media screen and (max-width: $tablet) {
+        padding: 0.4rem 0;
+    }
 
     & a {
       display: inline-block;
