--- a/assets/styles/partials/_summary.scss
+++ b/assets/styles/partials/_summary.scss
@@ -38,7 +38,7 @@
 
   & .post-cover {
     position: absolute;
-    top: 4.6rem;
+    top: 2.3rem;
     right: 0;
     width: 8rem;
     height: 8rem;
@@ -54,8 +54,38 @@
       position: static;
       height: 56.25vw;
       border-radius: 0;
-      margin:0 -0.5rem;
-      width: 95vw;
+      margin:0rem;
+      width: 90.5vw;
+
+      & + .post-summary {
+        padding-right: 0;
+      }
+    }
+  }
+
+  & .post-cover-link {
+    position: absolute;
+    top: 2.3rem;
+    right: 0;
+
+    object-fit: cover;
+    font-family: 'object-fit: cover;'; // Polyfill for object-fit
+    border-radius: $radius;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    z-index:9999;
+
+    & + .post-summary {
+      padding-right: 9rem;
+    }
+
+    @media screen and (max-width: $tablet) {
+      position: static;
+      height: 56.25vw;
+      border-radius: 0;
+      margin:0rem;
+      width: 90.5vw;
 
       & + .post-summary {
         padding-right: 0;
