--- a/assets/styles/partials/_summary.scss
+++ b/assets/styles/partials/_summary.scss
@@ -73,7 +73,7 @@
     border-radius: $radius;
     display: inline-block;
     width: 100%;
-    height: 100%;
+    //height: 100%;
     z-index:9999;
 
     & + .post-summary {
