manifest and bg changes

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -38,3 +38,7 @@ header.site-header li {
 header.site-header li:hover {
     opacity: 1;
 }
+
+body {
+	background: rgb(244, 243, 241) url('/images/grey-prism.svg') repeat fixed;
+}
